tests/samples/negative/expressions/invalid_integer_separator.ax
module invalid_integer_separator;

fn main() -> i32 {
    let value: i32 = 1_;
    return value;
}
